<resources>
    <string name="app_name">阿吉泰</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="input_check_code">输入验证码</string>
    <string name="input_phone_code">输入短信验证码</string>
    <string name="login">登录</string>
    <string name="get_phone_code">获取验证码</string>
    <string name="update_phone">修改手机号</string>
    <string name="refresh_login_qr">刷新二维码</string>
</resources>
