<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/page_bg">

        <com.easy.tvbox.ui.LoadingView
            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/llContain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="登录"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="345dp"
                android:layout_height="47dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/input_phone_num"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="#FF9B9B9B"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editImageCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/input_check_code"
                    android:paddingLeft="15dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="#FF9B9B9B"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="140dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/white">

                    <ImageView
                        android:id="@+id/ivImageCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@drawable/error_icon"
                        android:scaleType="fitXY" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editPhoneCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/input_phone_code"
                    android:paddingLeft="15dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="#FF9B9B9B"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/tvPhoneCode"
                    android:layout_width="140dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/edit_bg"
                    android:enabled="true"
                    android:gravity="center"
                    android:text="@string/get_phone_code"
                    android:textColor="@color/text_color_selector"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_selector"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</layout>