<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.easy.tvbox.ui.LoadingView
            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/page_bg"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/llContain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="修改手机号"
                android:textColor="#008FF4"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="345dp"
                android:layout_height="47dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/edit_gray_bg"
                android:hint="请输入旧手机号"
                android:nextFocusDown="@+id/editImageCode"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editImageCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_gray_bg"
                    android:hint="@string/input_check_code"
                    android:paddingLeft="15dp"
                    android:nextFocusRight="@+id/rlImageCode"
                    android:nextFocusUp="@+id/editPhone"
                    android:nextFocusDown="@+id/editPhoneCode"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/rlImageCode"
                    android:layout_width="140dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/edit_bg"
                    android:focusable="true"
                    android:nextFocusLeft="@+id/editImageCode"
                    android:nextFocusUp="@+id/editPhone"
                    android:nextFocusDown="@+id/tvPhoneCode"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/ivImageCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:scaleType="fitXY"
                        android:background="@drawable/error_icon" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editPhoneCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_gray_bg"
                    android:hint="@string/input_phone_code"
                    android:paddingLeft="15dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="18sp"
                    android:nextFocusRight="@+id/tvPhoneCode"
                    android:nextFocusUp="@+id/editImageCode"
                    android:nextFocusDown="@+id/tvCommit"/>


                <Button
                    android:id="@+id/tvPhoneCode"
                    android:layout_width="140dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/edit_gray_bg"
                    android:enabled="true"
                    android:gravity="center"
                    android:nextFocusLeft="@+id/editPhoneCode"
                    android:nextFocusUp="@+id/rlImageCode"
                    android:nextFocusDown="@+id/tvCommit"
                    android:text="@string/get_phone_code"
                    android:textColor="@color/text_color_selector"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvCommit"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_selector"
                android:gravity="center"
                android:focusable="true"
                android:text="修改"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>
</layout>